--- a/BibleBeatMe/Layouts/Base.lproj/Main.storyboard
+++ b/BibleBeatMe/Layouts/Base.lproj/Main.storyboard
@@ -101,6 +101,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular">
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="26"/>
                                                 </variation>
+                                                <connections>
+                                                    <segue destination="t8Y-ri-QS7" kind="presentation" id="VAW-xY-K1G"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kzE-tw-X01">
                                                 <rect key="frame" x="66.333333333333343" y="309.66666666666669" width="281.33333333333326" height="57"/>
@@ -172,6 +175,65 @@
             </objects>
             <point key="canvasLocation" x="29" y="124"/>
         </scene>
+        <!--Competition-->
+        <scene sceneID="CeI-Ig-NVS">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="overFullScreen" id="xoW-Rd-RY2" customClass="OpponentsViewController" customModule="BibleBeatMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TgS-wh-kid">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="UYW-SZ-09u">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="602"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZgR-2S-urd">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="160.66666666666666"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ro5-sk-NpZ">
+                                        <rect key="frame" x="0.0" y="160.66666666666666" width="414" height="441.33333333333337"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </tableView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="ZgR-2S-urd" firstAttribute="height" secondItem="UYW-SZ-09u" secondAttribute="height" multiplier="0.16" constant="64" id="ox7-8c-KE2"/>
+                                </constraints>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dHA-KI-6g4">
+                                <rect key="frame" x="0.0" y="602" width="414" height="70"/>
+                                <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="i8y-9B-OTh" firstAttribute="bottom" secondItem="UYW-SZ-09u" secondAttribute="bottom" constant="70" id="2Lg-O8-1mK"/>
+                            <constraint firstItem="dHA-KI-6g4" firstAttribute="top" secondItem="Ro5-sk-NpZ" secondAttribute="bottom" id="DDc-GM-QmH"/>
+                            <constraint firstItem="dHA-KI-6g4" firstAttribute="bottom" secondItem="TgS-wh-kid" secondAttribute="bottom" id="E2s-Ms-MSF"/>
+                            <constraint firstItem="UYW-SZ-09u" firstAttribute="leading" secondItem="TgS-wh-kid" secondAttribute="leading" id="XKM-d2-Y3h"/>
+                            <constraint firstItem="UYW-SZ-09u" firstAttribute="trailing" secondItem="TgS-wh-kid" secondAttribute="trailing" id="phh-az-Puv"/>
+                            <constraint firstItem="UYW-SZ-09u" firstAttribute="top" secondItem="TgS-wh-kid" secondAttribute="top" id="qtQ-py-IHf"/>
+                            <constraint firstItem="dHA-KI-6g4" firstAttribute="leading" secondItem="UYW-SZ-09u" secondAttribute="leading" id="t58-t0-wQy"/>
+                            <constraint firstItem="dHA-KI-6g4" firstAttribute="trailing" secondItem="UYW-SZ-09u" secondAttribute="trailing" id="u5n-7B-8eP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="i8y-9B-OTh"/>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" title="Competition" id="mUm-0K-ZAy">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="hmv-Hh-i2i"/>
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="O2N-g6-s8u">
+                            <connections>
+                                <action selector="backToHome:" destination="xoW-Rd-RY2" id="cW6-pK-M4j"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="backButton" destination="O2N-g6-s8u" id="syA-Tb-NVr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6LW-xK-plT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1560.8695652173915" y="123.91304347826087"/>
+        </scene>
         <!--Practice Navigation-->
         <scene sceneID="VZC-3R-Gae">
             <objects>
@@ -196,7 +258,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ycH-a9-gHz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="780" y="-492"/>
+            <point key="canvasLocation" x="787" y="-636"/>
         </scene>
         <!--Practice-->
         <scene sceneID="xg3-xr-j0O">
@@ -437,7 +499,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bT5-JJ-rFQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1568" y="-492"/>
+            <point key="canvasLocation" x="1561" y="-637"/>
         </scene>
         <!--Results-->
         <scene sceneID="e9p-Uk-dpS">
@@ -578,7 +640,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fXs-NP-EXm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3000.0000000000005" y="-492.39130434782612"/>
+            <point key="canvasLocation" x="3072" y="-637"/>
         </scene>
         <!--Result Practice Navigation-->
         <scene sceneID="RG4-PI-My9">
@@ -606,7 +668,33 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OUP-7A-lqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2294" y="-492"/>
+            <point key="canvasLocation" x="2307" y="-637"/>
+        </scene>
+        <!--Modal Navigation Controller-->
+        <scene sceneID="LoB-7g-dBB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="t8Y-ri-QS7" customClass="ModalNavigationController" customModule="BibleBeatMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="Gll-B2-guU">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                            <color key="textColor" red="0.80000000000000004" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="0.80000000000000004" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xoW-Rd-RY2" kind="relationship" relationship="rootViewController" id="Qsw-7T-7S4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bIg-lM-1Os" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="787" y="124"/>
         </scene>
     </scenes>
 </document>
